--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,17 +6,17 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'us-central1-docker.pkg.dev/erudite-wind-274600/kaizaan-100930806/dockerfile:$COMMIT_SHA']
     # Step 3: Deploy the Docker image to Cloud Run
- # - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  ## args:
-    #  - 'run'
-     #- 'dockerfile'
-      #- '--image'
-      #- 'us-central1-docker.pkg.dev/erudite-wind-274600/kaizaan-100930806/dockerfile:$COMMIT_SHA'
-     # - '--region'
-     # - 'us-central1'
-     # - '--platform'
-      #- 'managed'
-      #- '--allow-unauthenticated'
+   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+     args:
+        - 'run'
+        - 'dockerfile'
+        - '--image'
+        - 'us-central1-docker.pkg.dev/erudite-wind-274600/kaizaan-100930806/dockerfile:$COMMIT_SHA'
+        - '--region'
+        - 'us-central1'
+        - '--platform'
+        - 'managed'
+        - '--allow-unauthenticated'
 images:
   - 'us-central1-docker.pkg.dev/erudite-wind-274600/kaizaan-100930806/dockerfile:$COMMIT_SHA'
 options:
